--- a/patient0.ipynb
+++ b/patient0.ipynb
@@ -1828,8 +1828,11 @@
     }
    ],
    "source": [
-    "for t in [5, 10, 20]:    \n",
-    "    for p in range(1,4):\n",
+    "TIMESTEPS = [5, 10, 20]\n",
+    "PATIENTS = [1,2,3]\n",
+    "\n",
+    "for t in TIMESTEPS:    \n",
+    "    for p in PATIENTS:\n",
     "        for ss in [[t-1], [(t-1)//2, t-1], [(t-1)//3, 2*(t-1)//3, t-1]]:\n",
     "            graphs, nodes_statuses, initial_infected = generate_data(p, t, ss)\n",
     "            max_acc, avg_acc = train_test_model(len(ss), p)\n",
